# OfferDocGenerator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conftest.py  devenv.nix  main.py  offerdocgenerator.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_main.py  test_offerdocgenerator.py
.github/workflows/: ci.yml  release.yml
cli_test/offers/: config.yaml
cli_test/test_project/: config.yaml
docs/: CHANGELOG.md  configuration.md  overview.md  pydantic.json  python-docx-template
docs/configuration/: folder_structure.md  internationalization.md  overview.md  variables.md
docs/manuals/: python-docx-template.txt
odg/: __init__.py  main.py
offerdoc/config/: loader.py  models.py
offerdoc/core/: config.py  docx_merger.py  exceptions.py  file_handler.py  renderer.py
offerdoc/core/config/: models.py
offerdoc/core/exceptions/: exceptions.py
offerdoc/tests/: test_docx_merger.py
offers/: config.yaml  template_DE.docx  template_EN.docx
offers/common/: presales.docx
offers/products/Web Application Security Assessment/: section_1_1_DE.docx  section_3_2_EN.docx  section_3_4_DE.docx  section_3_4_EN.docx
offers/templates/: base_EN.docx
old/: SECURITY.md  offerdocgenerator.py  test_offerdocgenerator.py
old/core/: file_handler.py  renderer.py
old/core/config/: base.py
old/utils/: formatters.py  sanitizers.py
output/: Offer_Web Application Security Assessment_EN.docx
src/: __init__.py
src/config/: config_manager.py  logging_config.py  settings.py  variables.py
src/odg/: __init__.py  document.py  document_generator.py  main.py
src/odg/document/: __init__.py  base.py  docx.py  section.py  types.py
src/odg/utils/: error_handler.py  file_handler.py  logging.py
src/utils/: file_handler.py
templates/: bundle_base_DE.docx  bundle_base_EN.docx
test/: config.yaml
test/templates/: base_en.docx
testfiles/: test_offerdocgenerator.py
testfiles/input/: baseDE.dotx  baseEN.dotx
testfiles/textblock/common/: section1DE.txt  section1EN.txt  section2DE.txt  section2EN.txt
testfiles/textblock/products/MyProduct/: section1.2DE.txt  section1.2EN.txt
tests/: test_document_generation.py  test_docx_generation.py  test_main.py
tmp/: config.yaml  invalid.yaml
