[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offer-doc-generator"
version = "0.1"
description = "Offer Document Generator CLI Tool for multi-language document creation"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup"
]
dependencies = [
    "docxtpl>=0.19.1",
    "docxcompose>=1.3.6",
    "playwright>=1.49.1",
    "pydantic>=2.10.6",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "python-docx>=1.1.2",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.7.1",
]

[project.urls]
Homepage = "https://github.com/username/offer-doc-generator"
Documentation = "https://github.com/username/offer-doc-generator/wiki"

[project.scripts]
odg = "odg.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
markers = [
    "end_to_end: mark tests as end-to-end integration tests",
]
